# mhgl

./: .gitignore  Cargo.toml  LICENSE  README.md  notes_from_working_with_lib.md  tmpfile.tmp
src/: algs.rs  bgraph.rs  congraph.rs  dgraph.rs  edge.rs  generic_graph.rs  graph.rs  hgraph.rs  hypergraph.rs  kvgraph.rs  lib.rs  negraph.rs  node_trait.rs  pgraph.rs  simplex_tree.rs  stackgraph.rs  test_graph.json  utils.rs
src/algs/: builders.rs  cardinality.rs  cuts.rs  matching.rs  mod.rs  traversal.rs
src/matrix/: mod.rs
src/structs/: bit_basis.rs  bit_edge.rs  bit_graph.rs  bit_nodes.rs  bit_vec.rs  const_generics_bit_basis.rs  edge_set.rs  generic_edge.rs  generic_graph.rs  generic_vec.rs  hgraph.rs  hyperedge.rs  hypergraph.rs  matrix_graph.rs  mod.rs  node_vec.rs  nodes.rs  path.rs  sparse_basis.rs  sparse_edge.rs  sparse_graph.rs  sparse_vec.rs  vec_trait.rs
src/traits/: basis_trait.rs  hypergraph_trait.rs  mod.rs  node_trait.rs  vec_trait.rs
