[package]
name = "mhgl"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Matts HyperGraph Library (MHGL). A straightforward library for hypergraph datastructures. Not a database."
repository = "https://github.com/matthagan15/mhgl"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
faer = { version = "0.16.0", features = ["log"] }
num-integer = "0.1.45"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_json_any_key = "2.0.0"
serde_with = { version = "3.3.0", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde", "macro-diagnostics"] }
